--- a/style.css
+++ b/style.css
@@ -34,27 +34,22 @@ hr{
   transition: all 0.5s;
 }
 
-/* .container:hover{
-  width: 325px; 
-  height: 110px;
-} */
-
 a{
   width: 287px;
   height: 100px;
-  padding: 30px 50px;
+  padding: 27px 50px;
   text-decoration: none;
   color: rgb(202, 204, 93);
   font-size: 2rem;
   border: 5px solid rgb(119, 182, 172);
   position: relative;
-  font-weight: 300;
+  transition: all 1s;
   overflow: hidden;
 }
 
 a::before{
-  content: "Thank You!";
-  background-color: rgb(112, 222, 182);
+  content: "Hover Me!";
+  /* background-color: rgb(112, 222, 182); */
   color: darkblue;
   display: flex;
   justify-content: center;
@@ -64,15 +59,17 @@ a::before{
   left: 0;
   width: 100%;
   height: 100%;
-  /* transform: translate(-100%, 100%); */
+  transform: scale(5);
   transition: all 2s;
+  opacity: 0;
 }
 
 a:hover::before{
-  transform: translate(100%, -100%); 
+  transform: scale(1) ;
+  opacity: 1; 
 }
 
-a::after{
+/* a::after{
   content: "My Dear";
   background-color: rgb(112, 222, 182);
   color: darkblue;
@@ -86,8 +83,8 @@ a::after{
   height: 100%;
   transform: translate(-100%, 100%);
   transition: all 2s;
-}
+} */
 
-a:hover::after{
+/* a:hover::after{
   transform: translate(0, 0); 
-}
+} */
